fix the design on mobile screen

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -22,8 +22,9 @@ body {
 }
 
 .container {
+  height: 70vh;
   margin-top: 20px;
-  padding: 50px 20px;
+  padding: 80px 20px;
   text-align: center;
 
   h1 {
@@ -82,6 +83,7 @@ body {
 }
 
 footer {
+  height: 25vh;
   position: relative;
 
   .bg {
@@ -138,7 +140,7 @@ footer {
 
 @media (min-width: 400px) {
   .container {
-    width: 100%;
+    width: 94%;
     margin: auto;
   }
 }
